# arplus

./: .gitignore  CHANGELOG.md  DEVELOPMENT.md  Makefile  README.md  TODO.md
control/: Cargo.toml  Makefile
control/src/: arpeggiator.rs  calibration.rs  chords.rs  display.rs  display_request.rs  inputs.rs  lib.rs  quantized_output.rs  random.rs  save.rs
control/src/harmony/: mod.rs  quarter_tones.rs  scale.rs  scale_note.rs  tonic.rs
control/src/inputs/: buffer.rs  button.rs  cv.rs  cv_trigger.rs  gate.rs  mod.rs  pot.rs
control/src/parameters/: arp_mode.rs  chord.rs  chord_group_id.rs  continuous.rs  contour.rs  cutoff.rs  cv_assignment.rs  cv_mapping.rs  discrete.rs  gain.rs  mod.rs  pluck.rs  reset_next.rs  resonance.rs  scale.rs  scale_offsets.rs  stereo_mode.rs  strings.rs  toggle.rs  trigger.rs  width.rs
control/src/parameters/primitives/: continuous.rs  discrete.rs  math.rs  mod.rs  toggle.rs
control/src/scales/: mod.rs  quarter_tones.rs  scale.rs  scale_note.rs  tonic.rs
dsp/: Cargo.toml  Makefile
dsp/src/: ad_envelope.rs  dc_blocker.rs  envelope_follower.rs  instrument.rs  karplus_strong.rs  lib.rs  memory_manager.rs  overdrive.rs  phase_delay.rs  phase_delay_lookup.rs  ring_buffer.rs  sigmoid_lookup.rs  state_variable_filter.rs  taper.rs
dsp/src/oversampling/: coefficients.rs  downsampling.rs  mod.rs  upsampling.rs
dsp/tests/: stability_test.proptest-regressions  stability_test.rs
firmware/: Cargo.toml  Makefile
hack/: generate_chords_list.py  generate_note_frequencies.py  generate_scales_list.py  phase_delay.py  release.sh  (+2 more)
(+47 files in other folders)
