[package]
name = "arplus-control"
version = "0.1.0" # hack/release.sh
edition = "2021"
authors = ["Petr Horáček <petr@zlosynth.com>"]
license = "GPL-3.0-or-later"
publish = false

[dependencies]
crc = "2"
arplus-dsp = { path = "../dsp" }
defmt = "0.3"
heapless = { version = "0.8", features = [ "defmt-03" ] }
fastrand = { version = "2.0", default_features = false }
