[package]
name = "arplus-dsp"
version = "1.0.1" # hack/release.sh
edition = "2021"
authors = ["Petr Horáček <petr@zlosynth.com>"]
license = "GPL-3.0-or-later"
publish = false

[dependencies]
defmt = "0.3"
libm = "0.2"

[dev-dependencies]
heapless = "0.8"
approx = "0.4"
test-case = "1.2"
proptest = "1"
sirena = { git = "https://github.com/zlosynth/sirena", rev = "0ba4c32" }
rand = "0.9.1"
